"""Add entity_config table and remove empresa password

Revision ID: eb0eea0be28f
Revises: ae38db0dd228
Create Date: 2026-01-23 19:18:07.047923

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'eb0eea0be28f'
down_revision: Union[str, Sequence[str], None] = 'ae38db0dd228'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('entity_configs',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('empresa_id', sa.UUID(), nullable=False),
    sa.Column('entity_name', sa.String(), nullable=False),
    sa.Column('entity_type', sa.String(), nullable=False),
    sa.Column('config', postgresql.JSONB(astext_type=sa.Text()), server_default='{}', nullable=False),
    sa.ForeignKeyConstraint(['empresa_id'], ['empresas.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('empresa_id', 'entity_type', name='uq_empresa_entity_type')
    )
    op.create_index('ix_entity_config_config_gin', 'entity_configs', ['config'], unique=False, postgresql_using='gin')
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index('ix_entity_config_config_gin', table_name='entity_configs', postgresql_using='gin')
    op.drop_table('entity_configs')
    # ### end Alembic commands ###
